<?xml version="1.0"?>
<package format="2">
  <name>multicontact_force_estimator_msgs</name>
  <version>0.0.0</version>
  <description>The multicontact_force_estimator_msgs package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
